--- a/docs/jupyter/geometry/distance_queries.ipynb
+++ b/docs/jupyter/geometry/distance_queries.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "# Load mesh and convert to open3d.t.geometry.TriangleMesh\n",
-    "armadillo_data = o3d.data.Armadillo()\n",
+    "armadillo_data = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo_data.path)\n",
     "mesh = o3d.t.geometry.TriangleMesh.from_legacy(mesh)\n",
     "\n",
