--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "print(\"Testing mesh in Open3D...\")\n",
-    "armadillo = o3d.data.Armadillo()\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "\n",
     "mesh = o3dtut.get_knot_mesh()\n",
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_properties('Knot', o3dtut.get_knot_mesh())\n",
+    "check_properties('KnotMesh', o3dtut.get_knot_mesh())\n",
     "check_properties('Moebius', o3d.geometry.TriangleMesh.create_moebius(twists=1))\n",
     "check_properties(\"non-manifold edge\", o3dtut.get_non_manifold_edge_mesh())\n",
     "check_properties(\"non-manifold vertex\", o3dtut.get_non_manifold_vertex_mesh())\n",
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
@@ -587,7 +587,7 @@
    "outputs": [],
    "source": [
     "print(\"Generate data\")\n",
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
