--- a/docs/jupyter/geometry/mesh_deformation.ipynb
+++ b/docs/jupyter/geometry/mesh_deformation.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "armadillo = o3d.data.Armadillo()\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "\n",
     "vertices = np.asarray(mesh.vertices)\n",
