--- a/docs/jupyter/geometry/pointcloud.ipynb
+++ b/docs/jupyter/geometry/pointcloud.ipynb
@@ -204,8 +204,8 @@
    "source": [
     "print(\"Load a polygon volume and use it to crop the original point cloud\")\n",
     "demo_crop_data = o3d.data.DemoCropPointCloud()\n",
-    "pcd = o3d.io.read_point_cloud(demo_crop_data.path_pointcloud)\n",
-    "vol = o3d.visualization.read_selection_polygon_volume(demo_crop_data.path_cropped_json)\n",
+    "pcd = o3d.io.read_point_cloud(demo_crop_data.pointcloud_path)\n",
+    "vol = o3d.visualization.read_selection_polygon_volume(demo_crop_data.cropped_json_path)\n",
     "chair = vol.crop_point_cloud(pcd)\n",
     "o3d.visualization.draw_geometries([chair],\n",
     "                                  zoom=0.7,\n",
@@ -268,8 +268,8 @@
    "source": [
     "# Load data\n",
     "demo_crop_data = o3d.data.DemoCropPointCloud()\n",
-    "pcd = o3d.io.read_point_cloud(demo_crop_data.path_pointcloud)\n",
-    "vol = o3d.visualization.read_selection_polygon_volume(demo_crop_data.path_cropped_json)\n",
+    "pcd = o3d.io.read_point_cloud(demo_crop_data.pointcloud_path)\n",
+    "vol = o3d.visualization.read_selection_polygon_volume(demo_crop_data.cropped_json_path)\n",
     "chair = vol.crop_point_cloud(pcd)\n",
     "\n",
     "dists = pcd.compute_point_cloud_distance(chair)\n",
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
@@ -430,7 +430,7 @@
    "outputs": [],
    "source": [
     "print(\"Convert mesh to a point cloud and estimate dimensions\")\n",
-    "armadillo = o3d.data.Armadillo()\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
