--- a/docs/jupyter/geometry/surface_reconstruction.ipynb
+++ b/docs/jupyter/geometry/surface_reconstruction.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "gt_mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "gt_mesh.compute_vertex_normals()\n",
     "\n",
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eagle = o3d.data.Eagle()\n",
+    "eagle = o3d.data.EaglePointCloud()\n",
     "pcd = o3d.io.read_point_cloud(eagle.path)\n",
     "\n",
     "print(pcd)\n",
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "gt_mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "\n",
     "pcd = gt_mesh.sample_points_poisson_disk(5000)\n",
