--- a/docs/jupyter/geometry/voxelization.ipynb
+++ b/docs/jupyter/geometry/voxelization.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "print('input')\n",
-    "bunny = o3d.data.Bunny()\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "\n",
     "# fit to unit cube\n",
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "print('input')\n",
-    "armadillo = o3d.data.Armadillo()\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "\n",
     "N = 2000\n",
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "armadillo = o3d.data.Armadillo()\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "\n",
     "output_filename = os.path.abspath(\"../../test_data/voxelized.ply\")\n",
