--- a/docs/jupyter/pipelines/colored_pointcloud_registration.ipynb
+++ b/docs/jupyter/pipelines/colored_pointcloud_registration.ipynb
@@ -69,8 +69,8 @@
    "source": [
     "print(\"1. Load two point clouds and show initial pose\")\n",
     "demo_colored_icp_pcds = o3d.data.DemoColoredICPPointClouds()\n",
-    "source = o3d.io.read_point_cloud(demo_colored_icp_pcds.path[0])\n",
-    "target = o3d.io.read_point_cloud(demo_colored_icp_pcds.path[1])\n",
+    "source = o3d.io.read_point_cloud(demo_colored_icp_pcds.paths[0])\n",
+    "target = o3d.io.read_point_cloud(demo_colored_icp_pcds.paths[1])\n",
     "\n",
     "# draw initial alignment\n",
     "current_transformation = np.identity(4)\n",
