--- a/docs/jupyter/reconstruction_system/tintegrate_scene.ipynb
+++ b/docs/jupyter/reconstruction_system/tintegrate_scene.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "\n",
     "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
-    "camera_poses = read_trajectory(redwood_rgbd.path_odometry_log)"
+    "camera_poses = read_trajectory(redwood_rgbd.odometry_log_path)"
    ]
   },
   {
@@ -133,10 +133,10 @@
    "source": [
     "for i in range(len(camera_poses)):\n",
     "    print(\"Integrate {:d}-th image into the volume.\".format(i))\n",
-    "    color = o3d.io.read_image(redwood_rgbd.paths_color[i])\n",
+    "    color = o3d.io.read_image(redwood_rgbd.color_paths[i])\n",
     "    color = o3d.t.geometry.Image.from_legacy(color, device=device)\n",
     "\n",
-    "    depth = o3d.io.read_image(redwood_rgbd.paths_depth[i])\n",
+    "    depth = o3d.io.read_image(redwood_rgbd.depth_paths[i])\n",
     "    depth = o3d.t.geometry.Image.from_legacy(depth, device=device)\n",
     "\n",
     "    extrinsic = o3d.core.Tensor(np.linalg.inv(camera_poses[i].pose),\n",
