--- a/docs/jupyter/geometry/file_io.ipynb
+++ b/docs/jupyter/geometry/file_io.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "print(\"Testing IO for meshes ...\")\n",
-    "knot_data = o3d.data.Knot() \n",
+    "knot_data = o3d.data.KnotMesh() \n",
     "mesh = o3d.io.read_triangle_mesh(knot_data.path)\n",
     "print(mesh)\n",
     "o3d.io.write_triangle_mesh(\"copy_of_knot.ply\", mesh)"
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "print(\"Testing IO for images ...\")\n",
-    "image_data = o3d.data.Juneau()\n",
+    "image_data = o3d.data.JuneauImage()\n",
     "img = o3d.io.read_image(image_data.path)\n",
     "print(img)\n",
     "o3d.io.write_image(\"copy_of_Juneau.jpg\", img)"
