--- a/docs/jupyter/geometry/iss_keypoint_detector.ipynb
+++ b/docs/jupyter/geometry/iss_keypoint_detector.ipynb
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute ISS Keypoints on Armadillo\n",
-    "armadillo = o3d.data.Armadillo()\n",
+    "# Compute ISS Keypoints on ArmadilloMesh\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
@@ -103,8 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute ISS Keypoints on Standford Bunny, changing the default parameters\n",
-    "bunny = o3d.data.Bunny()\n",
+    "# Compute ISS Keypoints on Standford BunnyMesh, changing the default parameters\n",
+    "bunny = o3d.data.BunnyMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
     "mesh.compute_vertex_normals()\n",
     "\n",
