--- a/docs/jupyter/geometry/octree.ipynb
+++ b/docs/jupyter/geometry/octree.ipynb
@@ -49,7 +49,7 @@
     "print('input')\n",
     "N = 2000\n",
     "\n",
-    "armadillo = o3d.data.Armadillo()\n",
+    "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "pcd = mesh.sample_points_poisson_disk(N)\n",
     "# fit to unit cube\n",
