--- a/docs/jupyter/geometry/rgbd_image.ipynb
+++ b/docs/jupyter/geometry/rgbd_image.ipynb
@@ -49,8 +49,8 @@
    "source": [
     "print(\"Read Redwood dataset\")\n",
     "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
-    "color_raw = o3d.io.read_image(redwood_rgbd.paths_color[0])\n",
-    "depth_raw = o3d.io.read_image(redwood_rgbd.paths_depth[0])\n",
+    "color_raw = o3d.io.read_image(redwood_rgbd.color_paths[0])\n",
+    "depth_raw = o3d.io.read_image(redwood_rgbd.depth_paths[0])\n",
     "rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
     "    color_raw, depth_raw)\n",
     "print(rgbd_image)"
