--- a/docs/jupyter/pipelines/color_map_optimization.ipynb
+++ b/docs/jupyter/pipelines/color_map_optimization.ipynb
@@ -50,17 +50,17 @@
     "def load_fountain_dataset():\n",
     "    rgbd_images = []\n",
     "    fountain_rgbd_dataset = o3d.data.SampleFountainRGBDDataset()\n",
-    "    for i in range(len(fountain_rgbd_dataset.paths_depth)):\n",
-    "        depth = o3d.io.read_image(fountain_rgbd_dataset.paths_depth[i])\n",
-    "        color = o3d.io.read_image(fountain_rgbd_dataset.paths_color[i])\n",
+    "    for i in range(len(fountain_rgbd_dataset.depth_paths)):\n",
+    "        depth = o3d.io.read_image(fountain_rgbd_dataset.depth_paths[i])\n",
+    "        color = o3d.io.read_image(fountain_rgbd_dataset.color_paths[i])\n",
     "        rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
     "            color, depth, convert_rgb_to_intensity=False)\n",
     "        rgbd_images.append(rgbd_image)\n",
     "\n",
     "    camera_trajectory = o3d.io.read_pinhole_camera_trajectory(\n",
-    "        fountain_rgbd_dataset.path_keyframe_poses_log)\n",
+    "        fountain_rgbd_dataset.keyframe_poses_log_path)\n",
     "    mesh = o3d.io.read_triangle_mesh(\n",
-    "        fountain_rgbd_dataset.path_reconstruction)\n",
+    "        fountain_rgbd_dataset.reconstruction_path)\n",
     "\n",
     "    return mesh, rgbd_images, camera_trajectory"
    ]
