--- a/docs/jupyter/pipelines/rgbd_integration.ipynb
+++ b/docs/jupyter/pipelines/rgbd_integration.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
-    "camera_poses = read_trajectory(redwood_rgbd.path_odometry_log)"
+    "camera_poses = read_trajectory(redwood_rgbd.odometry_log_path)"
    ]
   },
   {
@@ -115,8 +115,8 @@
     "\n",
     "for i in range(len(camera_poses)):\n",
     "    print(\"Integrate {:d}-th image into the volume.\".format(i))\n",
-    "    color = o3d.io.read_image(redwood_rgbd.paths_color[i])\n",
-    "    depth = o3d.io.read_image(redwood_rgbd.paths_depth[i])\n",
+    "    color = o3d.io.read_image(redwood_rgbd.color_paths[i])\n",
+    "    depth = o3d.io.read_image(redwood_rgbd.depth_paths[i])\n",
     "    rgbd = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
     "        color, depth, depth_trunc=4.0, convert_rgb_to_intensity=False)\n",
     "    volume.integrate(\n",
