--- a/docs/jupyter/pipelines/rgbd_odometry.ipynb
+++ b/docs/jupyter/pipelines/rgbd_odometry.ipynb
@@ -76,10 +76,10 @@
    "source": [
     "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
     "\n",
-    "source_color = o3d.io.read_image(redwood_rgbd.paths_color[0])\n",
-    "source_depth = o3d.io.read_image(redwood_rgbd.paths_depth[0])\n",
-    "target_color = o3d.io.read_image(redwood_rgbd.paths_color[1])\n",
-    "target_depth = o3d.io.read_image(redwood_rgbd.paths_depth[1])\n",
+    "source_color = o3d.io.read_image(redwood_rgbd.color_paths[0])\n",
+    "source_depth = o3d.io.read_image(redwood_rgbd.depth_paths[0])\n",
+    "target_color = o3d.io.read_image(redwood_rgbd.color_paths[1])\n",
+    "target_depth = o3d.io.read_image(redwood_rgbd.depth_paths[1])\n",
     "source_rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
     "    source_color, source_depth)\n",
     "target_rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
