--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -37,10 +37,11 @@
    "outputs": [],
    "source": [
     "print(\"Testing mesh in Open3D...\")\n",
-    "armadillo = o3d.data.ArmadilloMesh()\n",
-    "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
+    "armadillo_mesh = o3d.data.ArmadilloMesh()\n",
+    "mesh = o3d.io.read_triangle_mesh(armadillo_mesh.path)\n",
     "\n",
-    "mesh = o3dtut.get_knot_mesh()\n",
+    "knot_mesh = o3d.data.KnotMesh()\n",
+    "mesh = o3d.io.read_triangle_mesh(knot_mesh.path)\n",
     "print(mesh)\n",
     "print('Vertices:')\n",
     "print(np.asarray(mesh.vertices))\n",
@@ -226,7 +227,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_properties('KnotMesh', o3dtut.get_knot_mesh())\n",
+    "knot_mesh_data = o3d.data.KnotMesh()\n",
+    "knot_mesh = o3d.io.read_triangle_mesh(knot_mesh_data.path)\n",
+    "check_properties('KnotMesh', knot_mesh)\n",
     "check_properties('Moebius', o3d.geometry.TriangleMesh.create_moebius(twists=1))\n",
     "check_properties(\"non-manifold edge\", o3dtut.get_non_manifold_edge_mesh())\n",
     "check_properties(\"non-manifold vertex\", o3dtut.get_non_manifold_vertex_mesh())\n",
@@ -263,7 +266,8 @@
    "outputs": [],
    "source": [
     "print('create noisy mesh')\n",
-    "mesh_in = o3dtut.get_knot_mesh()\n",
+    "knot_mesh = o3d.data.KnotMesh()\n",
+    "mesh_in = o3d.io.read_triangle_mesh(knot_mesh.path)\n",
     "vertices = np.asarray(mesh_in.vertices)\n",
     "noise = 5\n",
     "vertices += np.random.uniform(0, noise, size=vertices.shape)\n",
@@ -476,7 +480,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh = o3dtut.get_knot_mesh()\n",
+    "knot_mesh = o3d.data.KnotMesh()\n",
+    "mesh = o3d.io.read_triangle_mesh(knot_mesh.path)\n",
     "mesh.compute_vertex_normals()\n",
     "print(\n",
     "    f'The mesh has {len(mesh.vertices)} vertices and {len(mesh.triangles)} triangles'\n",
