path_color/depth to color_path/depth_path

--- a/docs/jupyter/geometry/rgbd_image.ipynb
+++ b/docs/jupyter/geometry/rgbd_image.ipynb
@@ -127,8 +127,8 @@
    "source": [
     "print(\"Read SUN dataset\")\n",
     "sun_rgbd = o3d.data.SampleRGBDImageSUN()\n",
-    "color_raw = o3d.io.read_image(sun_rgbd.path_color)\n",
-    "depth_raw = o3d.io.read_image(sun_rgbd.path_depth)\n",
+    "color_raw = o3d.io.read_image(sun_rgbd.color_path)\n",
+    "depth_raw = o3d.io.read_image(sun_rgbd.depth_path)\n",
     "rgbd_image = o3d.geometry.RGBDImage.create_from_sun_format(color_raw, depth_raw)\n",
     "print(rgbd_image)"
    ]
@@ -208,8 +208,8 @@
     "# Open3D does not support ppm/pgm file yet. Not using o3d.io.read_image here.\n",
     "# MathplotImage having some ISSUE with NYU pgm file. Not using imread for pgm.\n",
     "nyu_rgbd = o3d.data.SampleRGBDImageNYU()\n",
-    "color_raw = mpimg.imread(nyu_rgbd.path_color)\n",
-    "depth_raw = read_nyu_pgm(nyu_rgbd.path_depth)\n",
+    "color_raw = mpimg.imread(nyu_rgbd.color_path)\n",
+    "depth_raw = read_nyu_pgm(nyu_rgbd.depth_path)\n",
     "color = o3d.geometry.Image(color_raw)\n",
     "depth = o3d.geometry.Image(depth_raw)\n",
     "rgbd_image = o3d.geometry.RGBDImage.create_from_nyu_format(color, depth)\n",
@@ -264,8 +264,8 @@
    "source": [
     "print(\"Read TUM dataset\")\n",
     "tum_rgbd = o3d.data.SampleRGBDImageSUN()\n",
-    "color_raw = o3d.io.read_image(tum_rgbd.path_color)\n",
-    "depth_raw = o3d.io.read_image(tum_rgbd.path_depth)\n",
+    "color_raw = o3d.io.read_image(tum_rgbd.color_path)\n",
+    "depth_raw = o3d.io.read_image(tum_rgbd.depth_path)\n",
     "rgbd_image = o3d.geometry.RGBDImage.create_from_tum_format(color_raw, depth_raw)\n",
     "print(rgbd_image)"
    ]
