--- a/docs/jupyter/pipelines/global_registration.ipynb
+++ b/docs/jupyter/pipelines/global_registration.ipynb
@@ -105,7 +105,7 @@
     "def prepare_dataset(voxel_size):\n",
     "    print(\":: Load two point clouds and disturb initial pose.\")\n",
     "\n",
-    "    demo_icp_pcds = o3d.data.DemoICPPointCloud()\n",
+    "    demo_icp_pcds = o3d.data.DemoICPPointClouds()\n",
     "    source = o3d.io.read_point_cloud(demo_icp_pcds.paths[0])\n",
     "    target = o3d.io.read_point_cloud(demo_icp_pcds.paths[1])\n",
     "    trans_init = np.asarray([[0.0, 0.0, 1.0, 0.0], [1.0, 0.0, 0.0, 0.0],\n",
