Remove test_data dependency from tutorial

--- a/docs/jupyter/geometry/half_edge_mesh.ipynb
+++ b/docs/jupyter/geometry/half_edge_mesh.ipynb
@@ -45,15 +45,14 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-     },
+     "data": {},
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
     "# Initialize a HalfEdgeTriangleMesh from TriangleMesh\n",
-    "mesh = o3d.io.read_triangle_mesh(\"../../test_data/sphere.ply\")\n",
+    "mesh = o3d.geometry.TriangleMesh.create_sphere()\n",
     "bbox = o3d.geometry.AxisAlignedBoundingBox()\n",
     "bbox.min_bound = [-1, -1, -1]\n",
     "bbox.max_bound = [1, 0.6, 1]\n",
@@ -77,8 +76,7 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-     },
+     "data": {},
      "metadata": {},
      "output_type": "display_data"
     }
@@ -119,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
