--- a/docs/jupyter/geometry/voxelization.ipynb
+++ b/docs/jupyter/geometry/voxelization.ipynb
@@ -166,8 +166,6 @@
     "\n",
     "\n",
     "def voxel_carving(mesh,\n",
-    "                  output_filename,\n",
-    "                  camera_path,\n",
     "                  cubic_size,\n",
     "                  voxel_resolution,\n",
     "                  w=300,\n",
@@ -175,7 +173,7 @@
     "                  use_depth=True,\n",
     "                  surface_method='pointcloud'):\n",
     "    mesh.compute_vertex_normals()\n",
-    "    camera_sphere = o3d.io.read_triangle_mesh(camera_path)\n",
+    "    camera_sphere = o3d.geometry.TriangleMesh.create_sphere()\n",
     "\n",
     "    # setup dense voxel grid\n",
     "    voxel_carving = o3d.geometry.VoxelGrid.create_dense(\n",
@@ -257,14 +255,12 @@
     "armadillo = o3d.data.ArmadilloMesh()\n",
     "mesh = o3d.io.read_triangle_mesh(armadillo.path)\n",
     "\n",
-    "output_filename = os.path.abspath(\"../../test_data/voxelized.ply\")\n",
-    "camera_path = os.path.abspath(\"../../test_data/sphere.ply\")\n",
     "visualization = True\n",
     "cubic_size = 2.0\n",
     "voxel_resolution = 128.0\n",
     "\n",
     "voxel_grid, voxel_carving, voxel_surface = voxel_carving(\n",
-    "    mesh, output_filename, camera_path, cubic_size, voxel_resolution)\n"
+    "    mesh, cubic_size, voxel_resolution)\n"
    ]
   },
   {
