--- a/docs/jupyter/pipelines/rgbd_integration.ipynb
+++ b/docs/jupyter/pipelines/rgbd_integration.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
+    "redwood_rgbd = o3d.data.SampleRGBDDatasetRedwood()\n",
     "camera_poses = read_trajectory(redwood_rgbd.odometry_log_path)"
    ]
   },
