--- a/docs/jupyter/pipelines/rgbd_odometry.ipynb
+++ b/docs/jupyter/pipelines/rgbd_odometry.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
+    "redwood_rgbd = o3d.data.SampleRGBDDatasetRedwood()\n",
     "\n",
     "source_color = o3d.io.read_image(redwood_rgbd.color_paths[0])\n",
     "source_depth = o3d.io.read_image(redwood_rgbd.depth_paths[0])\n",
