--- a/docs/jupyter/geometry/rgbd_image.ipynb
+++ b/docs/jupyter/geometry/rgbd_image.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "print(\"Read Redwood dataset\")\n",
-    "redwood_rgbd = o3d.data.SampleRGBDDatasetICL()\n",
+    "redwood_rgbd = o3d.data.SampleRGBDDatasetRedwood()\n",
     "color_raw = o3d.io.read_image(redwood_rgbd.color_paths[0])\n",
     "depth_raw = o3d.io.read_image(redwood_rgbd.depth_paths[0])\n",
     "rgbd_image = o3d.geometry.RGBDImage.create_from_color_and_depth(\n",
