--- a/docs/jupyter/data/data.ipynb
+++ b/docs/jupyter/data/data.ipynb
@@ -165,22 +165,9 @@
    "source": [
     "Summary\n",
     "\n",
-    "When a dataset object is instantiated, the corresponding data will be\n",
-    "downloaded in `${data_root}/download/prefix/` and extracted or copied to\n",
-    "`${data_root}/extract/prefix/`. The default `${data_root}` location is\n",
-    "`$HOME/open3d_data`. If the extracted data directory exists, the files \n",
-    "will be used without validation. If it does not exist, and the valid \n",
-    "downloaded file exists, the data will be extracted from the downloaded file.\n",
-    "If the downloaded file does not exist or validates against the provided MD5,\n",
-    "it will be re-downloaded.\n",
+    "When a dataset object is instantiated, the corresponding data will be downloaded in `${data_root}/download/prefix/` and extracted or copied to `${data_root}/extract/prefix/`. The default `${data_root}` location is `$HOME/open3d_data`. If the extracted data directory exists, the files will be used without validation. If it does not exist, and the valid downloaded file exists, the data will be extracted from the downloaded file. If the downloaded file does not exist or validates against the provided MD5, it will be re-downloaded.\n",
     "\n",
-    "After the data is downloaded and extracted, the dataset object will NOT\n",
-    "load the data for you. Instead, you will get the paths to the data files\n",
-    "and use Open3D's I/O functions to load the data. This design exposes where\n",
-    "the data is stored and how the data is loaded, allowing users to modify\n",
-    "the code and load their own data in a similar way. Please check the\n",
-    "documentation of the specific dataset to know more about the specific\n",
-    "functionalities provided for it."
+    "After the data is downloaded and extracted, the dataset object will NOT load the data for you. Instead, you will get the paths to the data files and use Open3D's I/O functions to load the data. This design exposes where the data is stored and how the data is loaded, allowing users to modify the code and load their own data in a similar way. Please check the documentation of the specific dataset to know more about the specific functionalities provided for it."
    ]
   },
   {
