switch to Mobius spelling

--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -230,7 +230,7 @@
     "knot_mesh_data = o3d.data.KnotMesh()\n",
     "knot_mesh = o3d.io.read_triangle_mesh(knot_mesh_data.path)\n",
     "check_properties('KnotMesh', knot_mesh)\n",
-    "check_properties('Moebius', o3d.geometry.TriangleMesh.create_moebius(twists=1))\n",
+    "check_properties('Mobius', o3d.geometry.TriangleMesh.create_mobius(twists=1))\n",
     "check_properties(\"non-manifold edge\", o3dtut.get_non_manifold_edge_mesh())\n",
     "check_properties(\"non-manifold vertex\", o3dtut.get_non_manifold_vertex_mesh())\n",
     "check_properties(\"open box\", o3dtut.get_open_box_mesh())\n",
