rename dataset classes

--- a/docs/jupyter/geometry/kdtree.ipynb
+++ b/docs/jupyter/geometry/kdtree.ipynb
@@ -45,7 +45,7 @@
     "print(\"Testing kdtree in Open3D...\")\n",
     "print(\"Load a point cloud and paint it gray.\")\n",
     "\n",
-    "sample_pcd_data = o3d.data.SamplePointCloudPCD()\n",
+    "sample_pcd_data = o3d.data.PCDPointCloud()\n",
     "pcd = o3d.io.read_point_cloud(sample_pcd_data.path)\n",
     "pcd.paint_uniform_color([0.5, 0.5, 0.5])\n",
     "pcd_tree = o3d.geometry.KDTreeFlann(pcd)"
