Typo in index: arrays are 0-indexed

--- a/docs/jupyter/geometry/kdtree.ipynb
+++ b/docs/jupyter/geometry/kdtree.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "## Find neighboring points\n",
-    "We pick the 1500th point as the anchor point and paint it red."
+    "We pick the 1501st (arrays are 0-indexed) point as the anchor point and paint it red."
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Paint the 1500th point red.\")\n",
+    "print(\"Paint the 1501st point red.\")\n",
     "pcd.colors[1500] = [1, 0, 0]"
    ]
   },
