--- a/docs/jupyter/t_pipelines/t_icp_registration.ipynb
+++ b/docs/jupyter/t_pipelines/t_icp_registration.ipynb
@@ -93,92 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Different variants of ICP"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "#### Point-to-point ICP\n",
-    "\n",
-    "We first show a point-to-point ICP algorithm [\\[BeslAndMcKay1992\\]](../reference.html#beslandmckay1992) using the objective\n",
-    "\n",
-    "\\begin{equation}\n",
-    "E(\\mathbf{T}) = \\sum_{(\\mathbf{p},\\mathbf{q})\\in\\mathcal{K}}\\|\\mathbf{p} - \\mathbf{T}\\mathbf{q}\\|^{2}\n",
-    "\\end{equation}\n",
-    "\n",
-    "The class `TransformationEstimationPointToPoint` provides functions to compute the residuals and Jacobian matrices of the point-to-point ICP objective.\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### Point-to-plane ICP\n",
-    "The point-to-plane ICP algorithm [\\[ChenAndMedioni1992\\]](../reference.html#chenandmedioni1992) uses a different objective function\n",
-    "\n",
-    "\\begin{equation}\n",
-    "E(\\mathbf{T}) = \\sum_{(\\mathbf{p},\\mathbf{q})\\in\\mathcal{K}}\\big((\\mathbf{p} - \\mathbf{T}\\mathbf{q})\\cdot\\mathbf{n}_{\\mathbf{p}}\\big)^{2},\n",
-    "\\end{equation}\n",
-    "\n",
-    "where $\\mathbf{n}_{\\mathbf{p}}$ is the normal of point $\\mathbf{p}$. [\\[Rusinkiewicz2001\\]](../reference.html#rusinkiewicz2001) has shown that the point-to-plane ICP algorithm has a faster convergence speed than the point-to-point ICP algorithm.\n",
-    "\n",
-    "The class `TransformationEstimationPointToPlane` provides functions to compute the residuals and Jacobian matrices of the point-to-plane ICP objective. \n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Colored ICP\n",
-    "\n",
-    "Following [\\[Park2017\\]](../reference.html#park2017), it runs ICP iterations with a joint optimization objective\n",
-    "\n",
-    "\\begin{equation}\n",
-    "E(\\mathbf{T}) = (1-\\delta)E_{C}(\\mathbf{T}) + \\delta E_{G}(\\mathbf{T})\n",
-    "\\end{equation}\n",
-    "\n",
-    "where $\\mathbf{T}$ is the transformation matrix to be estimated. $E_{C}$ and $E_{G}$ are the photometric and geometric terms, respectively. $\\delta\\in[0,1]$ is a weight parameter that has been determined empirically.\n",
-    "\n",
-    "The geometric term $E_{G}$ is the same as the Point-to-plane ICP objective\n",
-    "\n",
-    "\\begin{equation}\n",
-    "E_{G}(\\mathbf{T}) = \\sum_{(\\mathbf{p},\\mathbf{q})\\in\\mathcal{K}}\\big((\\mathbf{p} - \\mathbf{T}\\mathbf{q})\\cdot\\mathbf{n}_{\\mathbf{p}}\\big)^{2},\n",
-    "\\end{equation}\n",
-    "\n",
-    "where $\\mathcal{K}$ is the correspondence set in the current iteration. $\\mathbf{n}_{\\mathbf{p}}$ is the normal of point $\\mathbf{p}$.\n",
-    "\n",
-    "The color term $E_{C}$ measures the difference between the color of point $\\mathbf{q}$ (denoted as $C(\\mathbf{q})$) and the color of its projection on the tangent plane of $\\mathbf{p}$.\n",
-    "\n",
-    "\\begin{equation}\n",
-    "E_{C}(\\mathbf{T}) = \\sum_{(\\mathbf{p},\\mathbf{q})\\in\\mathcal{K}}\\big(C_{\\mathbf{p}}(\\mathbf{f}(\\mathbf{T}\\mathbf{q})) - C(\\mathbf{q})\\big)^{2},\n",
-    "\\end{equation}\n",
-    "\n",
-    "where $C_{\\mathbf{p}}(\\cdot)$ is a precomputed function continuously defined on the tangent plane of $\\mathbf{p}$. Function$\\mathbf{f}(\\cdot)$ projects a 3D point to the tangent plane. For more details, refer to [\\[Park2017\\]](../reference.html#park2017).\n",
-    "\n",
-    "To further improve efficiency, [\\[Park2017\\]](../reference.html#park2017) proposes a multi-scale registration scheme. \n",
-    "\n",
-    "The class `TransformationEstimationForColoredICP` provides functions to compute the residuals and Jacobian matrices of the joint optimization objective. \n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Understanding ICP API\n",
@@ -1032,7 +946,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Point-To-Point ICP Registration \n",
+    "\n",
+    "## Point-To-Point ICP Registration \n",
     "\n",
     "We first show a point-to-point ICP algorithm [\\[BeslAndMcKay1992\\]](../reference.html#beslandmckay1992) using the objective\n",
     "\n",
@@ -1171,7 +1086,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Point-to-Plane ICP Registration\n",
+    "## Point-to-Plane ICP Registration\n",
     "The point-to-plane ICP algorithm [\\[ChenAndMedioni1992\\]](../reference.html#chenandmedioni1992) uses a different objective function\n",
     "\n",
     "\\begin{equation}\n",
@@ -1237,7 +1152,7 @@
     "tags": []
    },
    "source": [
-    "# Colored ICP Registration\n",
+    "## Colored ICP Registration\n",
     "This tutorial demonstrates an ICP variant that uses both geometry and color for registration. It implements the algorithm of [\\[Park2017\\]](../reference.html#park2017). The color information locks the alignment along the tangent plane. Thus this algorithm is more accurate and more robust than prior point cloud registration algorithms, while the running speed is comparable to that of ICP registration. "
    ]
   },
