--- a/docs/jupyter/t_pipelines/t_robust_kernel.ipynb
+++ b/docs/jupyter/t_pipelines/t_robust_kernel.ipynb
@@ -382,7 +382,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
