added dataset for PBR models, removed various test_data files, modified examples

--- a/docs/jupyter/pipelines/rgbd_odometry.ipynb
+++ b/docs/jupyter/pipelines/rgbd_odometry.ipynb
@@ -42,8 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "redwood_rgbd = o3d.data.SampleRedwoodRGBDImages()\n",
+    "\n",
     "pinhole_camera_intrinsic = o3d.io.read_pinhole_camera_intrinsic(\n",
-    "    \"../../test_data/camera_primesense.json\")\n",
+    "    redwood_rgbd.camera_intrinsic_path)\n",
     "print(pinhole_camera_intrinsic.intrinsic_matrix)"
    ]
   },
@@ -74,8 +76,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redwood_rgbd = o3d.data.SampleRedwoodRGBDImages()\n",
-    "\n",
     "source_color = o3d.io.read_image(redwood_rgbd.color_paths[0])\n",
     "source_depth = o3d.io.read_image(redwood_rgbd.depth_paths[0])\n",
     "target_color = o3d.io.read_image(redwood_rgbd.color_paths[1])\n",
