Update ICP interface to get iteration wise loss information (#4846)

--- a/docs/jupyter/t_pipelines/t_icp_registration.ipynb
+++ b/docs/jupyter/t_pipelines/t_icp_registration.ipynb
@@ -369,8 +369,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Save Loss Log\n",
-    "When `True`, it saves the iteration-wise values of `fitness`, `inlier_rmse`, `transformaton`, `scale`, `iteration` in `loss_log_` in `regsitration_result`. Default: `False`."
+    "#### Get Iteration-wise registration result using callback lambda function\n",
+    "\n",
+    "Optional lambda function, saves string to tensor dictionary of attributes such as \"iteration_index\", \"scale_index\", \"scale_iteration_index\", \"inlier_rmse\", \"fitness\", \"transformation\", on CPU device, updated after each iteration."
    ]
   },
   {
@@ -379,7 +380,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_loss_log = True"
+    "# Example callback_after_iteration lambda function:\n",
+    "callback_after_iteration = lambda updated_result_dict : print(\"Iteration Index: {}, Fitness: {}, Inlier RMSE: {},\".format(\n",
+    "    updated_result_dict[\"iteration_index\"].item(),\n",
+    "    updated_result_dict[\"fitness\"].item(), \n",
+    "    updated_result_dict[\"inlier_rmse\"].item()))"
    ]
   },
   {
@@ -461,7 +466,7 @@
     "\n",
     "registration_icp = treg.icp(source, target, max_correspondence_distance,\n",
     "                            init_source_to_target, estimation, criteria,\n",
-    "                            voxel_size, save_loss_log)\n",
+    "                            voxel_size, callback_after_iteration)\n",
     "\n",
     "icp_time = time.time() - s\n",
     "print(\"Time taken by ICP: \", icp_time)\n",
@@ -501,7 +506,7 @@
     "\n",
     "registration_icp = treg.icp(source, target, max_correspondence_distance,\n",
     "                            init_source_to_target, estimation, criteria,\n",
-    "                            voxel_size, save_loss_log)\n",
+    "                            voxel_size)\n",
     "\n",
     "icp_time = time.time() - s\n",
     "print(\"Time taken by ICP: \", icp_time)\n",
@@ -542,7 +547,7 @@
     "\n",
     "registration_icp = treg.icp(source, target, max_correspondence_distance,\n",
     "                            init_source_to_target, estimation, criteria,\n",
-    "                            voxel_size, save_loss_log)\n",
+    "                            voxel_size)\n",
     "\n",
     "icp_time = time.time() - s\n",
     "print(\"Time taken by ICP: \", icp_time)\n",
@@ -639,7 +644,12 @@
     "estimation = treg.TransformationEstimationPointToPlane()\n",
     "\n",
     "# Save iteration wise `fitness`, `inlier_rmse`, etc. to analyse and tune result.\n",
-    "save_loss_log = True"
+    "callback_after_iteration = lambda loss_log_map : print(\"Iteration Index: {}, Scale Index: {}, Scale Iteration Index: {}, Fitness: {}, Inlier RMSE: {},\".format(\n",
+    "    loss_log_map[\"iteration_index\"].item(), \n",
+    "    loss_log_map[\"scale_index\"].item(), \n",
+    "    loss_log_map[\"scale_iteration_index\"].item(), \n",
+    "    loss_log_map[\"fitness\"].item(), \n",
+    "    loss_log_map[\"inlier_rmse\"].item()))"
    ]
   },
   {
@@ -664,7 +674,7 @@
     "                                           criteria_list,\n",
     "                                           max_correspondence_distances,\n",
     "                                           init_source_to_target, estimation,\n",
-    "                                           save_loss_log)\n",
+    "                                           callback_after_iteration)\n",
     "\n",
     "ms_icp_time = time.time() - s\n",
     "print(\"Time taken by Multi-Scale ICP: \", ms_icp_time)\n",
@@ -672,93 +682,6 @@
     "print(\"Inlier RMSE: \", registration_ms_icp.inlier_rmse)\n",
     "\n",
     "draw_registration_result(source, target, registration_ms_icp.transformation)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting Convergence Graph\n",
-    "We can use the `registration_result.loss_log`, to plot convergence and fine-tune our application."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "\n",
-    "def plot_rmse(registration_result):\n",
-    "    fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(20, 5))\n",
-    "    axes.set_title(\"Inlier RMSE vs Iteration\")\n",
-    "    axes.plot(registration_result.loss_log[\"index\"].numpy(),\n",
-    "              registration_result.loss_log[\"inlier_rmse\"].numpy())\n",
-    "\n",
-    "\n",
-    "def plot_scale_wise_rmse(registration_result):\n",
-    "    scales = registration_result.loss_log[\"scale\"].numpy()\n",
-    "    iterations = registration_result.loss_log[\"iteration\"].numpy()\n",
-    "\n",
-    "    num_scales = scales[-1][0] + 1\n",
-    "\n",
-    "    fig, axes = plt.subplots(nrows=1, ncols=num_scales, figsize=(20, 5))\n",
-    "\n",
-    "    masks = {}\n",
-    "    for scale in range(0, num_scales):\n",
-    "        masks[scale] = registration_result.loss_log[\"scale\"] == scale\n",
-    "\n",
-    "        rmse = registration_result.loss_log[\"inlier_rmse\"][masks[scale]].numpy()\n",
-    "        iteration = registration_result.loss_log[\"iteration\"][\n",
-    "            masks[scale]].numpy()\n",
-    "\n",
-    "        title_prefix = \"Scale Index: \" + str(scale)\n",
-    "        axes[scale].set_title(title_prefix + \" Inlier RMSE vs Iteration\")\n",
-    "        axes[scale].plot(iteration, rmse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Vanilla ICP\")\n",
-    "plot_rmse(registration_icp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Multi Scale ICP\")\n",
-    "plot_rmse(registration_ms_icp)\n",
-    "plot_scale_wise_rmse(registration_ms_icp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(20, 5))\n",
-    "\n",
-    "axes.set_title(\"Vanilla ICP and Multi-Scale ICP `Inlier RMSE` vs `Iteration`\")\n",
-    "\n",
-    "if len(registration_ms_icp.loss_log[\"index\"]) > len(\n",
-    "        registration_icp.loss_log[\"inlier_rmse\"]):\n",
-    "    axes.plot(registration_ms_icp.loss_log[\"index\"].numpy(),\n",
-    "              registration_ms_icp.loss_log[\"inlier_rmse\"].numpy(),\n",
-    "              registration_icp.loss_log[\"inlier_rmse\"].numpy())\n",
-    "else:\n",
-    "    axes.plot(registration_icp.loss_log[\"index\"].numpy(),\n",
-    "              registration_icp.loss_log[\"inlier_rmse\"].numpy(),\n",
-    "              registration_ms_icp.loss_log[\"inlier_rmse\"].numpy())"
    ]
   },
   {
@@ -797,8 +720,7 @@
     "registration_ms_icp = treg.multi_scale_icp(source_cuda, target_cuda,\n",
     "                                           voxel_sizes, criteria_list,\n",
     "                                           max_correspondence_distances,\n",
-    "                                           init_source_to_target, estimation,\n",
-    "                                           save_loss_log)\n",
+    "                                           init_source_to_target, estimation)\n",
     "\n",
     "ms_icp_time = time.time() - s\n",
     "print(\"Time taken by Multi-Scale ICP: \", ms_icp_time)\n",
@@ -1022,7 +944,7 @@
     "\n",
     "reg_point_to_point = treg.icp(source, target, max_correspondence_distance,\n",
     "                              init_source_to_target, estimation, criteria,\n",
-    "                              voxel_size, save_loss_log)\n",
+    "                              voxel_size)\n",
     "\n",
     "icp_time = time.time() - s\n",
     "print(\"Time taken by Point-To-Point ICP: \", icp_time)\n",
@@ -1063,7 +985,7 @@
     "\n",
     "reg_point_to_point = treg.icp(source, target, max_correspondence_distance,\n",
     "                              init_source_to_target, estimation, criteria,\n",
-    "                              voxel_size, save_loss_log)\n",
+    "                              voxel_size)\n",
     "\n",
     "icp_time = time.time() - s\n",
     "print(\"Time taken by Point-To-Point ICP: \", icp_time)\n",
@@ -1122,7 +1044,7 @@
     "\n",
     "reg_point_to_plane = treg.icp(source, target, max_correspondence_distance,\n",
     "                              init_source_to_target, estimation, criteria,\n",
-    "                              voxel_size, save_loss_log)\n",
+    "                              voxel_size)\n",
     "\n",
     "icp_time = time.time() - s\n",
     "print(\"Time taken by Point-To-Plane ICP: \", icp_time)\n",
