refactor to consistent naming, added benchmark code

--- a/docs/jupyter/geometry/pointcloud_outlier_removal.ipynb
+++ b/docs/jupyter/geometry/pointcloud_outlier_removal.ipynb
@@ -128,8 +128,8 @@
    "outputs": [],
    "source": [
     "print(\"Statistical oulier removal\")\n",
-    "cl, ind = voxel_down_pcd.remove_statistical_outlier(nb_neighbors=20,\n",
-    "                                                    std_ratio=2.0)\n",
+    "cl, ind = voxel_down_pcd.remove_statistical_outliers(nb_neighbors=20,\n",
+    "                                                     std_ratio=2.0)\n",
     "display_inlier_outlier(voxel_down_pcd, ind)"
    ]
   },
@@ -141,7 +141,7 @@
     "`radius_outlier_removal` removes points that have few neighbors in a given sphere around them. Two parameters can be used to tune the filter to your data:\n",
     "\n",
     "- `nb_points`, which lets you pick the minimum amount of points that the sphere should contain.\n",
-    "- `radius`, which defines the radius of the sphere that will be used for counting the neighbors."
+    "- `search_radius`, which defines the radius of the sphere that will be used for counting the neighbors."
    ]
   },
   {
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "print(\"Radius oulier removal\")\n",
-    "cl, ind = voxel_down_pcd.remove_radius_outlier(nb_points=16, radius=0.05)\n",
+    "cl, ind = voxel_down_pcd.remove_radius_outliers(nb_points=16, search_radius=0.05)\n",
     "display_inlier_outlier(voxel_down_pcd, ind)"
    ]
   }
