removed IsSimilar, added unit test, injected doc, spell correction

--- a/docs/jupyter/t_pipelines/t_icp_registration.ipynb
+++ b/docs/jupyter/t_pipelines/t_icp_registration.ipynb
@@ -175,10 +175,10 @@
    },
    "source": [
     "#### Max correspondence Distances\n",
-    "- This is the radius of distance from each point in the source point-cloud in which the neighbour search will try to find a corresponding point in the target point-cloud.\n",
+    "- This is the radius of distance from each point in the source point-cloud in which the neighbors search will try to find a corresponding point in the target point-cloud.\n",
     "- It is a `double` for `icp`, and `utility.DoubleVector` for `multi-scale-icp`.\n",
     "- One may typically keep this parameter between `1.0x - 3.0x` `voxel-size` for each scale.\n",
-    "- This parameter is most important for performance tuning, as a higher radius will take larger time (as the neighbour search will be performed over a larger radius)."
+    "- This parameter is most important for performance tuning, as a higher radius will take larger time (as the neighbors search will be performed over a larger radius)."
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "# For Vanilla ICP (double)\n",
     "\n",
-    "# Search distance for Nearest Neighbour Search [Hybrid-Search is used].\n",
+    "# Search distance for Nearest Neighbors Search [Hybrid-Search is used].\n",
     "max_correspondence_distance = 0.07"
    ]
   },
@@ -426,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Search distance for Nearest Neighbour Search [Hybrid-Search is used].\n",
+    "# Search distance for Nearest Neighbors Search [Hybrid-Search is used].\n",
     "max_correspondence_distance = 0.07\n",
     "\n",
     "# Initial alignment or source to target transform.\n",
@@ -852,7 +852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Search distance for Nearest Neighbour Search [Hybrid-Search is used].\n",
+    "# Search distance for Nearest Neighbors Search [Hybrid-Search is used].\n",
     "max_correspondence_distance = 0.02\n",
     "\n",
     "print(\"Initial alignment\")\n",
@@ -915,7 +915,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Search distance for Nearest Neighbour Search [Hybrid-Search is used].\n",
+    "# Search distance for Nearest Neighbors Search [Hybrid-Search is used].\n",
     "max_correspondence_distance = 0.02\n",
     "\n",
     "# Initial alignment or source to target transform.\n",
