--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -517,17 +517,17 @@
    "outputs": [],
    "source": [
     "bunny = o3d.data.BunnyMesh()\n",
-    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
-    "mesh.compute_vertex_normals()\n",
+    "mesh_in = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh_in.compute_vertex_normals()\n",
     "\n",
     "print(\n",
-    "    f'Input mesh has {len(mesh.vertices)} vertices and {len(mesh.triangles)} triangles'\n",
+    "    f'Input mesh has {len(mesh_in.vertices)} vertices and {len(mesh_in.triangles)} triangles'\n",
     ")\n",
-    "o3d.visualization.draw_geometries([mesh])\n",
+    "o3d.visualization.draw_geometries([mesh_in])\n",
     "\n",
-    "voxel_size = max(mesh.get_max_bound() - mesh.get_min_bound()) / 32\n",
+    "voxel_size = max(mesh_in.get_max_bound() - mesh_in.get_min_bound()) / 32\n",
     "print(f'voxel_size = {voxel_size:e}')\n",
-    "mesh_smp = mesh.simplify_vertex_clustering(\n",
+    "mesh_smp = mesh_in.simplify_vertex_clustering(\n",
     "    voxel_size=voxel_size,\n",
     "    contraction=o3d.geometry.SimplificationContraction.Average)\n",
     "print(\n",
@@ -535,9 +535,9 @@
     ")\n",
     "o3d.visualization.draw_geometries([mesh_smp])\n",
     "\n",
-    "voxel_size = max(mesh.get_max_bound() - mesh.get_min_bound()) / 16\n",
+    "voxel_size = max(mesh_in.get_max_bound() - mesh_in.get_min_bound()) / 16\n",
     "print(f'voxel_size = {voxel_size:e}')\n",
-    "mesh_smp = mesh.simplify_vertex_clustering(\n",
+    "mesh_smp = mesh_in.simplify_vertex_clustering(\n",
     "    voxel_size=voxel_size,\n",
     "    contraction=o3d.geometry.SimplificationContraction.Average)\n",
     "print(\n",
