add newline at end

--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -656,7 +656,7 @@
     "largest_cluster_idx = cluster_n_triangles.argmax()\n",
     "triangles_to_remove = triangle_clusters != largest_cluster_idx\n",
     "mesh_1.remove_triangles_by_mask(triangles_to_remove)\n",
-    "o3d.visualization.draw_geometries([mesh_1])"
+    "o3d.visualization.draw_geometries([mesh_1])\n"
    ]
   }
  ],
