--- a/docs/jupyter/geometry/mesh.ipynb
+++ b/docs/jupyter/geometry/mesh.ipynb
@@ -517,8 +517,8 @@
    "outputs": [],
    "source": [
     "bunny = o3d.data.BunnyMesh()\n",
-    "mesh = o3d.io.read_triangle_mesh(bunny.path)\n",
-    "mesh.compute_vertex_normals()\n",
+    "mesh_in = o3d.io.read_triangle_mesh(bunny.path)\n",
+    "mesh_in.compute_vertex_normals()\n",
     "\n",
     "print(\n",
     "    f'Input mesh has {len(mesh_in.vertices)} vertices and {len(mesh_in.triangles)} triangles'\n",
@@ -656,7 +656,7 @@
     "largest_cluster_idx = cluster_n_triangles.argmax()\n",
     "triangles_to_remove = triangle_clusters != largest_cluster_idx\n",
     "mesh_1.remove_triangles_by_mask(triangles_to_remove)\n",
-    "o3d.visualization.draw_geometries([mesh_1])"
+    "o3d.visualization.draw_geometries([mesh_1])\n"
    ]
   }
  ],
