--- a/docs/jupyter/geometry/pointcloud.ipynb
+++ b/docs/jupyter/geometry/pointcloud.ipynb
@@ -422,7 +422,7 @@
     "## Planar patch detection\n",
     "In addition to finding the single plane with the largest support, Open3D includes an algorithm which uses a robust statistics-based approach for planar patch detection [\\[ArujoAndOliveira2020\\]](../reference.html#ArujoAndOliveira2020). This algorithm first subdivides the point cloud into smaller chunks (using an octree), then attempts to fit a plane to each chunk. If the plane passes a robust planarity test, then it is accepted. A plane is fitted to a subset of points by taking the median point position and the median point normal and estimating a plane $ax + by + cz + d = 0$. The robust planarity check consists of two main components. First, the distribution of angles between each point normal and the fitted plane normal is found. If the spread of this distribution is too high (i.e., there is too much variance amongst all of the associated point normals), then the plane is rejected. Second, the distribution of the distances from the fitted plane to each point is computed. If the spread of this distribution is too high, as measured using a coplanarity metric (see Fig. 4 of [\\[ArujoAndOliveira2020\\]](../reference.html#ArujoAndOliveira2020)), then the plane is rejected. After an initial set of planes are found, an iterative procedure is used to grow and merge planes into a smaller, stable set of planes. These planes can then be bounded using the 2D convex hull of their associated point sets and planar patches are extracted.\n",
     "\n",
-    "To find a list of planar patches in a point cloud, we can use `detect_planar_patches`. This method can take six arguments: `normal_similarity` controls the amount of variance allowed amongst the point normals and takes $\\cos(60^\\circ)$ as its default. Smaller values tends to result in fewer, higher quality planes. `coplanarity` controls the allowed distribution of point distances from the plane and takes $\\cos(75^\\circ)$ as its default. Smaller values encourage a tighter distribution of points around the fitted plane. `outlier_ratio` sets the maximum allowable outlier ratio in a fitted planes associated set of points before being rejected and has the default value of `0.75`. `min_plane_edge_length` is used to reject false positives---a planar patch's largest edge much be greater than this value to be considered a true planar patch. If left at `0`, the algorithm defaults to using a value of 1\\% of the point clouds largest dimension. `min_num_points` determines how deep the associated octree becomes and how many points must be present when attempting to fit a plane. If left at `0`, the algorithm defaults to 0.1\\% of the number of points in the point cloud. `search_param` is an instance of `geometry::KDTreeSearchParam` and defaults to `geometry::KDTreeSearchParamKNN`. The `k` nearest neighbors to each point are used when growing and merging planes. Larger values of `k` tend to produce higher quality patches at the expense of computation. This function then returns a list of planar patch parameter vectors. The parameter vector has the following definition: `[d*normal, center, basis_x, basis_y]`, where `normal` is the plane's unit-norm normal vector, `d` is the distance away from the origin (i.e., $n^\\top r = d$), `center` is the centroid of the planar patch, `basis_x` and `basis_y` are the scaled basis vectors of the plane, with magnitude equal to the width and height of the patch. Using these parameters, planar patch visualization can be accomplished using the `geometry::TriangleMesh::CreatePlanarPatch` factory function."
+    "To find a list of planar patches in a point cloud, we can use `detect_planar_patches`. This method can take six arguments: `normal_variance_threshold_deg` controls the amount of variance allowed amongst the point normals and takes $60^\\circ$ as its default. Smaller values tends to result in fewer, higher quality planes. `coplanarity_deg` controls the allowed distribution of point distances from the plane and takes $75^\\circ$ as its default. Larger values encourage a tighter distribution of points around the fitted plane. `outlier_ratio` sets the maximum allowable outlier ratio in a fitted planes associated set of points before being rejected and has the default value of `0.75`. `min_plane_edge_length` is used to reject false positives---a planar patch's largest edge much be greater than this value to be considered a true planar patch. If left at `0`, the algorithm defaults to using a value of 1\\% of the point clouds largest dimension. `min_num_points` determines how deep the associated octree becomes and how many points must be present when attempting to fit a plane. If left at `0`, the algorithm defaults to 0.1\\% of the number of points in the point cloud. `search_param` is an instance of `geometry::KDTreeSearchParam` and defaults to `geometry::KDTreeSearchParamKNN`. The `k` nearest neighbors to each point are used when growing and merging planes. Larger values of `k` tend to produce higher quality patches at the expense of computation. This function then returns a list of detected planar patches, represented as `geometry::OrientedBoundingBox` objects, with the third column (i.e., $z$) of `R` indicating the planar patch normal vector. The extent in the $z$ direction is non-zero so that the OrientedBoundingBox contains the points that contribute to the plane detection. The planar patches can be visualized using the `geometry::TriangleMesh::CreateFromOrientedBoundingBox` factory function, using the `scale` parameter to \"flatten\" the bounding box along the normal, i.e., `CreateFromOrientedBoundingBox(obox, scale=[1, 1, 0.0001])`."
    ]
   },
   {
@@ -436,28 +436,22 @@
     "assert (pcd.has_normals())\n",
     "\n",
     "# using all defaults\n",
-    "patches = pcd.detect_planar_patches(\n",
-    "    normal_similarity=np.cos(np.deg2rad(60)),\n",
-    "    coplanarity=np.cos(np.deg2rad(75)),\n",
+    "oboxes = pcd.detect_planar_patches(\n",
+    "    normal_variance_threshold_deg=60,\n",
+    "    coplanarity_deg=75,\n",
     "    outlier_ratio=0.75,\n",
     "    min_plane_edge_length=0,\n",
     "    min_num_points=0,\n",
     "    search_param=o3d.geometry.KDTreeSearchParamKNN(knn=30))\n",
     "\n",
-    "print(\"Detected {} patches\".format(len(patches)))\n",
+    "print(\"Detected {} patches\".format(len(oboxes)))\n",
     "\n",
     "geometries = []\n",
-    "for patch in patches:\n",
-    "    normal = patch[:3] / np.linalg.norm(patch[:3])\n",
-    "    d = np.linalg.norm(patch[:3])\n",
-    "    center = patch[3:6]\n",
-    "    basis_x = patch[6:9]\n",
-    "    basis_y = patch[9:12]\n",
-    "    mesh = o3d.geometry.TriangleMesh.create_planar_patch(\n",
-    "            center, basis_x, basis_y, normal)\n",
-    "    mesh.compute_vertex_normals()\n",
-    "    mesh.paint_uniform_color([0.78, 0.15, 0.11])\n",
+    "for obox in oboxes:\n",
+    "    mesh = o3d.geometry.TriangleMesh.create_from_oriented_bounding_box(obox, scale=[1, 1, 0.0001])\n",
+    "    mesh.paint_uniform_color(obox.color)\n",
     "    geometries.append(mesh)\n",
+    "    geometries.append(obox)\n",
     "geometries.append(pcd)\n",
     "\n",
     "o3d.visualization.draw_geometries(geometries,\n",
