--- a/docs/jupyter/visualization/visualization.ipynb
+++ b/docs/jupyter/visualization/visualization.ipynb
@@ -229,7 +229,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +243,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3c9f9a500ca684ee401c6824dc59bb17f7418a54cdadde026de4b201d5bd57e6"
+   }
   }
  },
  "nbformat": 4,
